fix: tweaks header on mobile view

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -624,6 +624,12 @@ h2 {
   background-color: rgb(202 45 14 / var(--tw-bg-opacity));
 }
 
+@media (max-width: 768px) {
+  .category-list:before {
+    display: none;
+  }
+}
+
 @media (min-width: 1024px) {
   .category-list:before {
     display: block;
@@ -645,6 +651,12 @@ h2 {
   bottom: 0px;
   --tw-bg-opacity: 1;
   background-color: rgb(202 45 14 / var(--tw-bg-opacity));
+}
+
+@media (max-width: 768px) {
+  .category-list:after {
+    display: none;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -731,10 +743,6 @@ h2 {
   margin-bottom: 5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -745,6 +753,10 @@ h2 {
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-3 {
@@ -978,8 +990,9 @@ h2 {
   background-color: rgb(0 116 117 / var(--tw-bg-opacity));
 }
 
-.bg-secondary\/15 {
-  background-color: rgb(0 116 117 / 0.15);
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -989,25 +1002,6 @@ h2 {
 
 .bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
-}
-
-.bg-secondary\/25 {
-  background-color: rgb(0 116 117 / 0.25);
-}
-
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\/bg-gradient\.svg\)\] {
@@ -1038,8 +1032,8 @@ h2 {
   padding: 2rem;
 }
 
-.p-\[1rem_1rem_2rem\] {
-  padding: 1rem 1rem 2rem;
+.p-\[3rem_1rem_2rem\] {
+  padding: 3rem 1rem 2rem;
 }
 
 .\!px-6 {
@@ -1172,11 +1166,6 @@ h2 {
   line-height: 1;
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-graytext {
   --tw-text-opacity: 1;
   color: rgb(101 101 101 / var(--tw-text-opacity));
@@ -1277,6 +1266,10 @@ h2 {
     margin-right: 1.25rem;
   }
 
+  .md\:mt-4 {
+    margin-top: 1rem;
+  }
+
   .md\:w-full {
     width: 100%;
   }
@@ -1336,8 +1329,8 @@ h2 {
     gap: 2.5rem;
   }
 
-  .lg\:p-\[6rem_2rem\] {
-    padding: 6rem 2rem;
+  .lg\:p-\[6rem_2rem_4rem\] {
+    padding: 6rem 2rem 4rem;
   }
 
   .lg\:\!px-0 {
