--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -53,13 +53,13 @@
     content: "";
     width: 200px;
     height: 1px;
-    @apply bg-primary absolute left-0 bottom-0 min-[1200px]:bottom-[unset] lg:block;
+    @apply bg-primary absolute left-0 bottom-0 max-[768px]:hidden min-[1200px]:bottom-[unset] lg:block;
   }
 
   .category-list:after {
     content: "";
     width: 200px;
     height: 1px;
-    @apply bg-primary absolute right-0 bottom-0 min-[1200px]:bottom-[unset] lg:block;
+    @apply bg-primary absolute right-0 bottom-0 max-[768px]:hidden min-[1200px]:bottom-[unset] lg:block;
   }
 }
